# forge-cli

./: .gitignore  6dce5827-3ea5-4718-9f07-c03274287208.json  7a9793b3-444a-487b-aa04-598e761dab12.json  ADR-002-reasoning-event-handling.md  ADR-003-file-search-annotation-display.md  CHAT_MODE_FIX.md  CLAUDE.md  INSPECT_COMMAND_IMPLEMENTATION.md  MIGRATION_STATUS.md  PLAINTEXT_MODULAR_REFACTORING_COMPLETE.md  PROMPT_ICONS_IMPLEMENTATION.md  QUICK_START_FILE_REFERENCE.md  README.md  README_hello-file-reader.md  README_multi-tools.md  README_rag-testing.md  README_reasoning-events.md  REFACTORING_SUMMARY.md  TYPED_API_MIGRATION.md  TYPED_API_MIGRATION_COMPLETE.md  TYPE_ANNOTATIONS_SUMMARY.md  TYPE_SYSTEM_IMPROVEMENTS.md  beison.json  cli_refactored.py  create-and-query-vectorstore.py  create-files.py  create-fix-vectorstore-and-join-files.py  create-vectorstore.py  dataset.py  debug-all-events.py  debug-multi-tool-examples.md  debug.py  debug_consecutive_tool_calls.py  demo-multi-tools-concept.py  demo.sh  forge_cli-dev  forge_cli.sh  hello-file-reader.py  hello-file-search-refactored.py  hello-file-search.py  (+48 more)
.claude/: .gitignore  settings.json
docs/: API.md  CLAUDE.md  conversation-state-tools.md  file-reference-syntax.md  requirement.md  topk-command.md
hello_file_search_refactored/: CHAT_MODE_PLAN.md  README.md  config.py  main.py
scripts/: CLAUDE.md  cli.py  create-and-query-vectorstore.py  create-files.py  create-fix-dataset.py  create-vectorstore.py  create_ml_document.py  debug.py  debug_typed.py  hello-async.py  hello-file-search-refactored.py  join-file.py  (+17 more)
(+499 files in other folders)
