[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-cli"
version = "0.1.0"
description = "CLI tool for interacting with Knowledge Forge API"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "aiohttp>=3.8.0",
    "rich>=12.0.0",
    "loguru>=0.6.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=22.0.0", "flake8>=4.0.0", "mypy>=0.900"]

[project.scripts]
forge-cli = "forge_cli.main:run_main_async"

[project.urls]
Homepage = "https://github.com/yourusername/forge-cli"
Repository = "https://github.com/yourusername/forge-cli"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900",
]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
